# brows3

./: CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.mjs  next.config.ts  package.json  update.json
.github/scripts/: extract-release-notes.js
.github/workflows/: release.yml
docs/: WEBSITE_SCREENSHOTS.md
public/screenshots/website/dark/: manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/: operations.rs
src-tauri/src/credentials/: keychain.rs  manager.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/bucket/: page.tsx
src/app/downloads/: page.tsx
src/app/favorites/: page.tsx
src/app/recent/: page.tsx
src/app/settings/: page.tsx
src/app/uploads/: page.tsx
src/components/common/: BaseDialog.tsx  ToastContainer.tsx  VirtualizedObjectTable.tsx
src/components/dialogs/: AboutDialog.tsx  ObjectPreviewDialog.tsx  PresignedUrlDialog.tsx  PropertiesDialog.tsx  RenameDialog.tsx
src/components/layout/: Footer.tsx  Sidebar.tsx  TabBar.tsx  TopBar.tsx
src/components/navigation/: PathBar.tsx
src/components/profile/: ProfileDialog.tsx  ProfileSelector.tsx
src/hooks/: useObjects.ts
src/lib/: monaco-config.ts  tauri.ts
src/store/: appStore.ts  browserStorage.ts  clipboardStore.ts  historyStore.ts  settingsStore.ts  transferStore.ts
