[package]
name = "brows3"
version = "0.2.36"
description = "Premium, Secure S3 Browser for macOS, Windows, and Linux."
authors = ["Brows3 Team"]
license = "MIT"
homepage = "https://github.com/rgcsekaraa/brows3"
repository = "https://github.com/rgcsekaraa/brows3"
edition = "2021"

[lib]
name = "brows3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# AWS SDK - latest versions
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "credentials-process", "rt-tokio", "rustls", "sso"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"

# Secure credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
urlencoding = "2.1.3"
walkdir = "2.5.0"
futures = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
